Fix 404 breadcrumb and add note about content missing from archive
Resolves #3

--- a/404.html
+++ b/404.html
@@ -126,11 +126,15 @@
         </div>
         <div id="main" class="span-24">
 
-<div class="bbcrumb"> &raquo; Page not found!</div>
+<div class="bbcrumb"><a href="/">Digital Humanities Questions &amp; Answers</a>
+ &raquo; Page not found!</div>
 
 <h2 id="http404">Page not found!</h2>
 
 <p>I'm sorry, but there is nothing at this URL.</p>
+
+<p>Either it never existed, or it wasn't included in the archive recovered
+    from the Wayback Machine.</p>
 
 <div class="clearit"><br style=" clear: both;" /></div>
 
