Fix html title for 404 page

--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-    <title>Open Peer Review now LIVE until 8/3! - Digital Pedagogy in the Humanities &laquo; Digital Humanities Questions &amp; Answers</title>
+    <title>Page not found &laquo; Digital Humanities Questions &amp; Answers</title>
     <link rel="stylesheet" href="/bb-templates/dhqa/style.css" type="text/css" />
     <link rel="stylesheet" href="/bb-templates/dhqa/blueprint/screen.css" type="text/css" media="screen" title="blueprint-print" charset="utf-8"/>
     <link rel="stylesheet" href="/bb-templates/dhqa/blueprint/print.css" type="text/css" media="print" title="blueprint-print" charset="utf-8"/>
